# technical_task_ptolemay

./: .env_example  .gitignore  Dockerfile  README.md  alembic.ini  api.py  docker-compose.yml  pyproject.toml  requirements.txt
technical_project/alembic/: env.py
technical_project/alembic/versions/: 0fbb3332aee3_create_table_emp_and_dep.py  1076da284858_create_base_model.py  91cce0d29ad1_create_table_auth.py  d97bb4635bac_create_table_auth.py
technical_project/apps/auth/: api.py  models.py  schemas.py  services.py
technical_project/apps/departament/: admin.py  api.py  models.py  schemas.py  services.py
technical_project/apps/employee/: admin.py  api.py  models.py  schemas.py  services.py
technical_project/config/: jwt_settings.py  settings.py
technical_project/db/: base.py  base_model.py  deps.py  session.py
technical_project/routes/: __init__.py
