[tool.poetry]
name = "technical-task"
version = "0.1.0"
description = ""
authors = ["Zhanat <janat.200066@gmail.com>"]
readme = "README.md"
packages = [{include = "technical_task"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.16"
asyncpg = "^0.27.0"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
sqladmin = "^0.12.0"
greenlet = "^2.0.2"
fastapi-pagination = "^0.12.4"
fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.5.0"}
passlib = "^1.7.4"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
